KS-4328: The "+" icon of "Related to" is not aligned in Manage Question form. Fix description: Add cs to set height & width for AddIcon in UIQuestionManageForm.

--- a/eXoApplication/faq/webapp/src/main/webapp/skin/DefaultSkin/webui/Stylesheet.css
+++ b/eXoApplication/faq/webapp/src/main/webapp/skin/DefaultSkin/webui/Stylesheet.css
@@ -1781,6 +1781,10 @@
 	height:24px;
 	width:24px;
 }
+.UIAnswersPortlet .UIQuestionManagerForm .AddIcon {
+	height:16px;
+	width:16px;
+}
 
 .UIAnswersPortlet .CheckIcon {
 	background: url('background/icon.png') no-repeat left;
